add jar-plugin and surefire-plugin to maven pom